syntax = "proto3";

enum PB_TelemetryType {
    TELEMETRY_TYPE_NONE = 0;
    TELEMETRY_TYPE_ODOMETRY = 1;
}

message PB_TelemetryTypeCommand {
    PB_TelemetryType type = 1;
}

message PB_Telemetry_Odometry {
    int64 left_ticks = 1;
    int64 right_ticks = 2;
}

message PB_Telemetry {
    oneof telemetry {
        PB_Telemetry_Odometry odometry = 1;
    }
}
